[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itamae"
version = "0.1.0"
description = "Integrated Toolkit for Analytical Merger-tree And Evolution"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23", "scipy>=1.9"]

[project.optional-dependencies]
astropy = ["astropy>=5"]
colossus = ["colossus>=1.3"]
io = ["h5py>=3"]
test = ["pytest>=7", "pytest-cov>=4", "astropy>=5", "colossus>=1.3"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
