[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itamae"
version = "0.1.0a4"
description = "Integrated Toolkit for Analytical Merger-tree And Evolution"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Shunichi Horigome"}]
dependencies = ["numpy>=1.26", "scipy>=1.11"]

[project.urls]
Repository = "https://github.com/gomeshun/itamae"
Issues = "https://github.com/gomeshun/itamae/issues"

[project.optional-dependencies]
astropy = ["astropy>=6"]
colossus = ["colossus>=1.3"]
full = ["astropy>=6", "colossus>=1.3"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "hypothesis>=6", "numpydoc>=1.7", "build>=1.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/itamae"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# The first CI gate focuses on executable-code correctness. Import ordering,
# NumPy migration checks, and docstring completeness will be re-enabled after
# applying their auto-fixes and dedicated validation in a follow-up commit.
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D"]
